--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "youtube-app",
-  "version": "0.1.0",
+  "version": "1.1.0",
+  "repository": "https://github.com/varoman/youtube-project",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
